app-manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: weather-app
  name: weather-app
  namespace: default
spec:
  replicas: 2
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: weather-app
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: weather-app
    spec:
      containers:
      - image: 255595642331.dkr.ecr.us-east-2.amazonaws.com/weather-app:latest
        imagePullPolicy: Always
        name: weather-app
      restartPolicy: Always
