app-manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: weather-app
  namespace: default
spec:
  loadBalancerClass: service.k8s.aws/nlb
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8000
  selector:
    app: weather-app
  type: LoadBalancer
