app-manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    alb.ingress.kubernetes.io/certificate-arn: REPLACE_ME_WITH_NGINXS_CERT_ARN
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80,"HTTPS":443}]'
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/ssl-policy: ELBSecurityPolicy-TLS13-1-2-2021-06
    alb.ingress.kubernetes.io/ssl-redirect: "443"
  name: weather-app
  namespace: default
spec:
  ingressClassName: aws-lb-controller
  rules:
  - host: weather.davidjoliver86.xyz
    http:
      paths:
      - backend:
          service:
            name: weather-app
            port:
              number: 80
        path: /
        pathType: Prefix
